@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,9 +25,10 @@
 
 package jdk.internal.access;
 
+import java.io.InputStream;
 import java.lang.annotation.Annotation;
+import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.module.ModuleDescriptor;
 import java.lang.reflect.Executable;
@@ -40,11 +41,18 @@ import java.security.ProtectionDomain;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.stream.Stream;
 
+import jdk.internal.misc.CarrierThreadLocal;
 import jdk.internal.module.ServicesCatalog;
 import jdk.internal.reflect.ConstantPool;
+import jdk.internal.vm.Continuation;
+import jdk.internal.vm.ContinuationScope;
+import jdk.internal.vm.StackableScope;
+import jdk.internal.vm.ThreadContainer;
 import sun.reflect.annotation.AnnotationType;
 import sun.nio.ch.Interruptible;
 
@@ -56,6 +64,11 @@ public interface JavaLangAccess {
      * and parameter types.
      */
     List<Method> getDeclaredPublicMethods(Class<?> klass, String name, Class<?>... parameterTypes);
+
+    /**
+     * Return most specific method that matches name and parameterTypes.
+     */
+    Method findMethod(Class<?> klass, boolean publicOnly, String name, Class<?>... parameterTypes);
 
     /**
      * Return the constant pool for a class.
@@ -169,11 +182,6 @@ public interface JavaLangAccess {
     Package definePackage(ClassLoader cl, String name, Module module);
 
     /**
-     * Invokes Long.fastUUID
-     */
-    String fastUUID(long lsb, long msb);
-
-    /**
      * Record the non-exported packages of the modules in the given layer
      */
     void addNonExportedPackages(ModuleLayer layer);
@@ -262,14 +270,21 @@ public interface JavaLangAccess {
     Module addEnableNativeAccess(Module m);
 
     /**
-     * Updates all unnamed modules to allow access to restricted methods.
+     * Updates module named {@code name} in layer {@code layer} to allow access to restricted methods.
+     * Returns true iff the given module exists in the given layer.
      */
-    void addEnableNativeAccessAllUnnamed();
+    boolean addEnableNativeAccess(ModuleLayer layer, String name);
 
     /**
-     * Returns true if module m can access restricted methods.
+     * Updates all unnamed modules to allow access to restricted methods.
      */
-    boolean isEnableNativeAccess(Module m);
+    void addEnableNativeAccessToAllUnnamed();
+
+    /**
+     * Ensure that the given module has native access. If not, warn or
+     * throw exception depending on the configuration.
+     */
+    void ensureNativeAccess(Module m, Class<?> owner, String methodName, Class<?> currentClass);
 
     /**
      * Returns the ServicesCatalog for the given Layer.
@@ -293,6 +308,11 @@ public interface JavaLangAccess {
      * given class loader.
      */
     Stream<ModuleLayer> layers(ClassLoader loader);
+
+    /**
+     * Count the number of leading positive bytes in the range.
+     */
+    int countPositives(byte[] ba, int off, int len);
 
     /**
      * Constructs a new {@code String} by decoding the specified subarray of
@@ -335,6 +355,25 @@ public interface JavaLangAccess {
     String newStringUTF8NoRepl(byte[] bytes, int off, int len);
 
     /**
+     * Get the char at index in a byte[] in internal UTF-16 representation,
+     * with no bounds checks.
+     *
+     * @param bytes the UTF-16 encoded bytes
+     * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
+     * @return the char value
+     */
+    char getUTF16Char(byte[] bytes, int index);
+
+    /**
+     * Put the char at index in a byte[] in internal UTF-16 representation,
+     * with no bounds checks.
+     *
+     * @param bytes the UTF-16 encoded bytes
+     * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
+     */
+    void putCharUTF16(byte[] bytes, int index, int ch);
+
+    /**
      * Encode the given string into a sequence of bytes using utf8.
      *
      * @param s the string to encode
@@ -355,6 +394,12 @@ public interface JavaLangAccess {
      * @return the number of bytes successfully decoded, at most len
      */
     int decodeASCII(byte[] src, int srcOff, char[] dst, int dstOff, int len);
+
+    /**
+     * Returns the initial `System.in` to determine if it is replaced
+     * with `System.setIn(newIn)` method
+     */
+    InputStream initialSystemIn();
 
     /**
      * Encodes ASCII codepoints as possible from the source array into
@@ -382,6 +427,12 @@ public interface JavaLangAccess {
     MethodHandle stringConcatHelper(String name, MethodType methodType);
 
     /**
+     * Prepends constant and the stringly representation of value into buffer,
+     * given the coder and final index. Index is measured in chars, not in bytes!
+     */
+    long stringConcatHelperPrepend(long indexCoder, byte[] buf, String value);
+
+    /**
      * Get the string concat initial coder
      */
     long stringConcatInitialCoder();
@@ -390,6 +441,11 @@ public interface JavaLangAccess {
      * Update lengthCoder for constant
      */
     long stringConcatMix(long lengthCoder, String constant);
+
+    /**
+     * Mix value length and coder into current length and coder.
+     */
+    long stringConcatMix(long lengthCoder, char value);
 
     /**
      * Join strings
@@ -403,6 +459,12 @@ public interface JavaLangAccess {
      */
     Object classData(Class<?> c);
 
+    int stringSize(long i);
+
+    int getCharsLatin1(long i, int index, byte[] buf);
+
+    int getCharsUTF16(long i, int index, byte[] buf);
+
     long findNative(ClassLoader loader, String entry);
 
     /**
@@ -410,4 +472,141 @@ public interface JavaLangAccess {
      * @param statusCode the status code
      */
     void exit(int statusCode);
+
+    /**
+     * Returns an array of all platform threads.
+     */
+    Thread[] getAllThreads();
+
+    /**
+     * Returns the ThreadContainer for a thread, may be null.
+     */
+    ThreadContainer threadContainer(Thread thread);
+
+    /**
+     * Starts a thread in the given ThreadContainer.
+     */
+    void start(Thread thread, ThreadContainer container);
+
+    /**
+     * Returns the top of the given thread's stackable scope stack.
+     */
+    StackableScope headStackableScope(Thread thread);
+
+    /**
+     * Sets the top of the current thread's stackable scope stack.
+     */
+    void setHeadStackableScope(StackableScope scope);
+
+    /**
+     * Returns the Thread object for the current platform thread. If the
+     * current thread is a virtual thread then this method returns the carrier.
+     */
+    Thread currentCarrierThread();
+
+    /**
+     * Executes the given value returning task on the current carrier thread.
+     */
+    <V> V executeOnCarrierThread(Callable<V> task) throws Exception;
+
+    /**
+     * Returns the value of the current carrier thread's copy of a thread-local.
+     */
+    <T> T getCarrierThreadLocal(CarrierThreadLocal<T> local);
+
+    /**
+     * Sets the value of the current carrier thread's copy of a thread-local.
+     */
+    <T> void setCarrierThreadLocal(CarrierThreadLocal<T> local, T value);
+
+    /**
+     * Removes the value of the current carrier thread's copy of a thread-local.
+     */
+    void removeCarrierThreadLocal(CarrierThreadLocal<?> local);
+
+    /**
+     * Returns {@code true} if there is a value in the current carrier thread's copy of
+     * thread-local, even if that values is {@code null}.
+     */
+    boolean isCarrierThreadLocalPresent(CarrierThreadLocal<?> local);
+
+    /**
+     * Returns the current thread's scoped values cache
+     */
+    Object[] scopedValueCache();
+
+    /**
+     * Sets the current thread's scoped values cache
+     */
+    void setScopedValueCache(Object[] cache);
+
+    /**
+     * Return the current thread's scoped value bindings.
+     */
+    Object scopedValueBindings();
+
+    /**
+     * Returns the innermost mounted continuation
+     */
+    Continuation getContinuation(Thread thread);
+
+    /**
+     * Sets the innermost mounted continuation
+     */
+    void setContinuation(Thread thread, Continuation continuation);
+
+    /**
+     * The ContinuationScope of virtual thread continuations
+     */
+    ContinuationScope virtualThreadContinuationScope();
+
+    /**
+     * Parks the current virtual thread.
+     * @throws WrongThreadException if the current thread is not a virtual thread
+     */
+    void parkVirtualThread();
+
+    /**
+     * Parks the current virtual thread for up to the given waiting time.
+     * @param nanos the maximum number of nanoseconds to wait
+     * @throws WrongThreadException if the current thread is not a virtual thread
+     */
+    void parkVirtualThread(long nanos);
+
+    /**
+     * Re-enables a virtual thread for scheduling. If the thread was parked then
+     * it will be unblocked, otherwise its next attempt to park will not block
+     * @param thread the virtual thread to unpark
+     * @throws IllegalArgumentException if the thread is not a virtual thread
+     * @throws RejectedExecutionException if the scheduler cannot accept a task
+     */
+    void unparkVirtualThread(Thread thread);
+
+    /**
+     * Creates a new StackWalker
+     */
+    StackWalker newStackWalkerInstance(Set<StackWalker.Option> options,
+                                       ContinuationScope contScope,
+                                       Continuation continuation);
+    /**
+     * Returns '<loader-name>' @<id> if classloader has a name
+     * explicitly set otherwise <qualified-class-name> @<id>
+     */
+    String getLoaderNameID(ClassLoader loader);
+
+    /**
+     * Copy the string bytes to an existing segment, avoiding intermediate copies.
+     */
+    void copyToSegmentRaw(String string, MemorySegment segment, long offset);
+
+    /**
+     * Are the string bytes compatible with the given charset?
+     */
+    boolean bytesCompatible(String string, Charset charset);
+
+    /**
+     * Is a security manager already set or allowed to be set
+     * (using -Djava.security.manager=allow)?
+     */
+    boolean allowSecurityManager();
 }
